--- a/composer.json
+++ b/composer.json
@@ -10,12 +10,14 @@
     ],
     "minimum-stability": "dev",
     "require": {
-        "symfony/console": "~2.4"
+        "symfony/console": "~2.4",
+        "symfony/framework-bundle": "~2.4"
     },
     "autoload": {
         "psr-4": {"MassiveArt\\Bundle\\BuildBundle\\": "."}
     },
     "require-dev": {
-        "phpspec/prophecy-phpunit": "v1.0.1"
+        "phpspec/prophecy-phpunit": "v1.0.1",
+        "matthiasnoback/symfony-dependency-injection-test": "v0.7.1"
     }
 }
