--- a/composer.json
+++ b/composer.json
@@ -4,20 +4,20 @@
     "homepage": "https://github.com/massiveart/MassiveBuildBundle",
     "authors": [
         {
-            "name": "Daniel Leech",
-            "email": "daniel.leech@massiveart.com"
+            "name": "Sulu Community",
+            "homepage": "https://github.com/massiveart/MassiveBuildBundle/contributors"
         }
     ],
     "license": "MIT",
     "require": {
-        "symfony/console": "~2.4",
-        "symfony/framework-bundle": "~2.4"
+        "symfony/console": "~3.0 || ~2.8",
+        "symfony/framework-bundle": "~3.0 || ~2.8"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^4.5",
+        "matthiasnoback/symfony-dependency-injection-test": "1.1.*"
     },
     "autoload": {
         "psr-4": {"Massive\\Bundle\\BuildBundle\\": "."}
-    },
-    "require-dev": {
-        "phpunit/phpunit": "5.7.*",
-        "matthiasnoback/symfony-dependency-injection-test": "1.1.*"
     }
 }
