updated symfony dependency to symfony 4

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -14,4 +14,8 @@
             </exclude>
         </whitelist>
     </filter>
+
+    <php>
+        <env name="SYMFONY_DEPRECATIONS_HELPER" value="strong"/>
+    </php>
 </phpunit>
