--- a/composer.json
+++ b/composer.json
@@ -10,11 +10,12 @@
     ],
     "license": "MIT",
     "require": {
-        "symfony/console": "~3.0 || ~2.8",
-        "symfony/framework-bundle": "~3.0 || ~2.8"
+        "symfony/console": "~4.0 || ~3.4 || ~2.8",
+        "symfony/framework-bundle": "~4.0 || ~3.4 || ~2.8"
     },
     "require-dev": {
         "phpunit/phpunit": "^4.5",
+        "symfony/phpunit-bridge": "~4.0 || ~3.4.8 || ~2.8",
         "matthiasnoback/symfony-dependency-injection-test": "1.1.*"
     },
     "autoload": {
