Add symfony 5 compatibility

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -16,6 +16,8 @@
     </filter>
 
     <php>
-        <env name="SYMFONY_DEPRECATIONS_HELPER" value="strong"/>
+        <env name="SYMFONY_DEPRECATIONS_HELPER" value="weak"/>
+        <env name="SYMFONY_PHPUNIT_REMOVE_RETURN_TYPEHINT" value="1"/>
+        <env name="SYMFONY_PHPUNIT_REMOVE" value="symfony/yaml"/>
     </php>
 </phpunit>
