--- a/.travis.yml
+++ b/.travis.yml
@@ -2,13 +2,10 @@ language: php
 
 matrix:
   include:
-    - php: 5.5
+    - php: 7.2
       env:
         - COMPOSER_FLAGS="--prefer-lowest --prefer-dist --no-interaction"
-    - php: 5.6
-      env:
-        - COMPOSER_FLAGS="--prefer-dist --no-interaction"
-    - php: 7.0
+    - php: 7.4
       env:
         - COMPOSER_FLAGS="--prefer-dist --no-interaction"
 
@@ -16,4 +13,4 @@ before_script:
   - composer self-update
   - composer update $COMPOSER_FLAGS
 
-script: vendor/bin/phpunit
+script: vendor/bin/simple-phpunit
