--- a/composer.json
+++ b/composer.json
@@ -10,13 +10,15 @@
     ],
     "license": "MIT",
     "require": {
-        "symfony/console": "~4.0 || ~3.4 || ~2.8",
-        "symfony/framework-bundle": "~4.0 || ~3.4 || ~2.8"
+        "php": ">=7.2.0",
+        "symfony/console": "^4.3 || ^5.0",
+        "symfony/config": "^4.3 || ^5.0",
+        "symfony/dependency-injection": "^4.3 || ^5.0",
+        "symfony/framework-bundle": "^4.3 || ^5.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^4.5",
-        "symfony/phpunit-bridge": "~4.0 || ~3.4.8 || ~2.8",
-        "matthiasnoback/symfony-dependency-injection-test": "1.1.*"
+        "symfony/phpunit-bridge": "^5.0.4",
+        "matthiasnoback/symfony-dependency-injection-test": "^4.0"
     },
     "autoload": {
         "psr-4": {"Massive\\Bundle\\BuildBundle\\": "."}
