--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,9 @@
         "matthiasnoback/symfony-dependency-injection-test": "1.1.*"
     },
     "autoload": {
-        "psr-4": {"Massive\\Bundle\\BuildBundle\\": "."}
+        "psr-4": {"Massive\\Bundle\\BuildBundle\\": "."},
+        "exclude-from-classmap": [
+            "Tests/"
+        ]
     }
 }
