--- a/.github/workflows/test-application.yaml
+++ b/.github/workflows/test-application.yaml
@@ -14,6 +14,9 @@ jobs:
         name: 'Run tests with php ${{ matrix.php-version }}'
         runs-on: ubuntu-latest
 
+        env:
+            SYMFONY_DEPRECATIONS_HELPER: disabled
+
         strategy:
             fail-fast: false
             matrix:
