--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,5 @@
 .gitattributes export-ignore
 .gitignore export-ignore
-.travis.yml export-ignore
+/.github export-ignore
 phpunit.xml.dist export-ignore
 /Tests export-ignore
