Adjust header in .php_cs.dist

--- a/.php_cs.dist
+++ b/.php_cs.dist
@@ -1,9 +1,9 @@
 <?php
 
 $header = <<<EOF
-This file is part of Sulu.
+This file is part of the MassiveBuildBundle
 
-(c) Sulu GmbH
+(c) MASSIVE ART WebServices GmbH
 
 This source file is subject to the MIT license that is bundled
 with this source code in the file LICENSE.
