--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     ],
     "license": "MIT",
     "require": {
+        "php": ">=5.4",
         "symfony/console": "~4.0 || ~3.4 || ~2.8",
         "symfony/framework-bundle": "~4.0 || ~3.4 || ~2.8"
     },
