--- a/composer.json
+++ b/composer.json
@@ -11,13 +11,13 @@
     "license": "MIT",
     "require": {
         "php": ">=7.2.0",
-        "symfony/console": "^4.3 || ^5.0",
-        "symfony/config": "^4.3 || ^5.0",
-        "symfony/dependency-injection": "^4.3 || ^5.0",
-        "symfony/framework-bundle": "^4.3 || ^5.0"
+        "symfony/console": "^4.3 || ^5.0 || ^6.0",
+        "symfony/config": "^4.3 || ^5.0 || ^6.0",
+        "symfony/dependency-injection": "^4.3 || ^5.0 || ^6.0",
+        "symfony/framework-bundle": "^4.3 || ^5.0 || ^6.0"
     },
     "require-dev": {
-        "symfony/phpunit-bridge": "^5.0.4",
+        "symfony/phpunit-bridge": "^5.0.4 || ^6.0",
         "matthiasnoback/symfony-dependency-injection-test": "^4.0"
     },
     "autoload": {
