--- a/.github/workflows/test-application.yaml
+++ b/.github/workflows/test-application.yaml
@@ -16,8 +16,13 @@ jobs:
             fail-fast: false
             matrix:
                 include:
-                    - php-version: '7.4'
+                    - php-version: '7.2'
                       dependency-versions: 'lowest'
+                      tools: 'composer:v1'
+                      php-cs-fixer: false
+
+                    - php-version: '7.4'
+                      dependency-versions: 'highest'
                       tools: 'composer:v2'
                       php-cs-fixer: false
 
