Remove unnecessary dummy test class

--- a/composer.json
+++ b/composer.json
@@ -25,5 +25,8 @@
         "exclude-from-classmap": [
             "Tests/"
         ]
+    },
+    "autoload-dev": {
+        "psr-4": {"Massive\\Bundle\\BuildBundle\\Tests\\": "Tests/"}
     }
 }
